discussion/kv_engine/153272/153272_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46216: Check log format strings at compile-time

Make use of the FMT_STRING macro to check format strings at
compile-time using fmtlib v7.

If a call to the logger omits one or more arguments, then a
compile-time error will be seen - given the following (incorrect) call
missing a argument for 'bar':

    EP_LOG_DEBUG("Foo:{} bar:{}", foo);

The compiler fails with:

   fmt/format.h:2873:27: constexpr variable 'invalid_format' must be initialized by a constant expression

(admittedly not the most obvious, but you get what you get with C++
compiler errors...)

The trickiest part here is getting the logger to accept both calls
with format strings and variable args (like the example above), and
plain, single argument fixed string - e.g.

    EP_LOG_DEBUG("Something interesting happened");

This is because "Something interesting happened" isn't considered to
be a valid formatting string by fmtlib, and hence will trigger a
compile-time error if you attempt to verify it as such. Therefore it
is necessary to use the preprocessor to pass through such messages
without applying the FMT_STRING() macro to them, by selecting between
two variants of the underlying logging macro based on the argument
count.

Change-Id: I32c37dfc9672663e5741433885787f1e941fe795

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-27 15:14:58.000000000
Message: 
Uploaded patch set 6: Commit message was updated.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 16:01:57.000000000
Message: 
Patch Set 6:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36148/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\cb3_executorthread.cc(33): error C3861: "EP_LOG_FMT": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36148/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9857/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9857/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30870/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7808/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10933/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10789/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18758/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 21:05:27.000000000
Message: 
Patch Set 6:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6: error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:24: error: use of undeclared identifier "spdlog" [clang-diagnostic-error]
void BucketLogger::log(spdlog::level::level_enum lvl,
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger_impl.h:20:6:
error: use of undeclared identifier "BucketLogger" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9228/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36148/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\cb3_executorthread.cc(33): error C3861: "EP_LOG_FMT": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36148/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30870/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7808/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10933/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10789/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18758/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9872/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
